FindErrors Fixing
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@8622 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: ba1e4f807421bac8cb923d7e13618504089103d7